[package]
name = "etcd-rs"
version = "0.1.0"
authors = ["0x80"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bytes = "0.5"
anyhow = "1.0.31"
thiserror = "1.0"
[dev-dependencies]
chrono = "0.4.12"
env_logger="0.7.1"
